--- a/ncis/src/styles/Execs.css
+++ b/ncis/src/styles/Execs.css
@@ -1,24 +1,23 @@
 .execs-section {
     position: relative;
     margin-top: 0px;
-    padding-top: 65px;
     width: 100vw;
-    margin-bottom: 40vh;
     min-height: 800px;
+    z-index: 1;
 }
 
 .execs-container {
+    position: relative; 
     z-index: 1;
-    background-color: white;
-    height: 60vh;
-    padding-top: 10px;  /* distance of heading to profile container */
-    padding-bottom: 20px;
+    width: 100%;
+    min-height: 80vh; 
+    flex-shrink: 0;
+    height: max-content;
+    margin-bottom: 20px;  /* distance of heading to profile container */
     align-items: center;
-    flex-direction: row;
-    position: absolute;
+    flex-direction: column;
+    
 }
-
-
 
 @media (orientation:landscape) and (max-width: 500px) {
     .execs-container{
@@ -28,14 +27,13 @@
 
 .profile-container {
     width: 100vw;
-    height: 90vh;
+    min-height: 40vh; 
+    height: max-content;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 0em;
-    padding-top: 10%;
-    border: 0em;
+    padding-bottom: 500px;
 }
 
 @media (max-width: 1022px) {
@@ -145,10 +143,10 @@
 
 .execs-diag {
     position: absolute;
-    top: 120%;
     left: 0%;
+    top: 100%; 
     width: 110%;
-    height: 35%;
+    height: 60%;
     z-index: 1;
   }
     
@@ -156,9 +154,11 @@
   .execs-diag::after {
     content: "";
     position: absolute;
+    top: 30%;
     left: 40%;
     width: 100%;
-    height: 80%;
+    z-index: 1;
+    height: 0%;
     background: whitesmoke;
     flex-shrink: 0;
     transform-origin: 100% 0%;
