--- a/ncis/src/styles/Goals.css
+++ b/ncis/src/styles/Goals.css
@@ -1,49 +1,31 @@
 #goals-section {
   position: relative;
   margin-top: 0;
-  padding-top: 65px;
-  background: #fff;
-  height: 80vh;
+  padding-top: 5px;
   width: 100vw;
-  z-index: 1; 
+  height: max-content; 
+  min-height: 80vh; 
+  z-index: 1;
 }
-
-
-@media (orientation:landscape) {
-  .goals-section {
-    min-height: 600px; 
-  }
-}
-
-@media (orientation:portrait) {
-  .goals-section {
-    min-height: 700px; 
-  }
-}
-
 
 .goals-container {
+  position: relative; 
   z-index: 1;
-  position: absolute;
-  background-color: white;
-  height: auto; 
+  width: 100%;
+  min-height: 80vh; 
+  flex-shrink: 0;
+  height: max-content;
+  margin-bottom: 0; 
 }
 
 .img-container {
   width: 100%;
-  height: auto; 
+  min-height: max-content;
   display: flex;
   align-items: center; 
   justify-content: center;
   margin-bottom: 0;
   border: 0; 
-}
-
-@media (orientation:landscape) and (max-height:600px) {
-  .img-container {
-    min-height: 300px; 
-    margin-top: 50px;
-  }
 }
 
 .desktop-image {
@@ -67,7 +49,6 @@
   .desktop-image {
     max-width: 20vw;
     max-height: 20vh; 
-    transform: translateY(-50%);
   }
 }
 
@@ -104,17 +85,18 @@
 
 .goals-diag {
   position: absolute;
-  top: 80%;
   left: 0%;
+  top: 100%; 
   width: 110%;
-  height: 35%;
+  height: 60%;
   z-index: 1;
 }
 
 
 .goals-diag::after {
-  content: "";
+  content: '';
   position: absolute;
+  top: -50%;
   left: 40%;
   width: 100%;
   height: 80%;
@@ -125,3 +107,17 @@
   -ms-transform: rotate(-5deg) translateX(-50%);
   transform: rotate(-5deg) translateX(-50%);
 }
+
+
+@media (max-width: 800px) {
+  .goals-diag::after {
+    top: -30%;
+  }
+}
+
+@media (max-width: 515px) {
+  .goals-diag::after {
+    top: -15%;
+  }
+}
+
