--- a/ncis/src/styles/Hero.css
+++ b/ncis/src/styles/Hero.css
@@ -5,7 +5,7 @@ img {
 
 .hero-section {
   position: relative;
-  height: 80vh;
+  max-height: 80vh;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -49,6 +49,15 @@ img {
   -ms-transform: rotate(-5deg) translateX(-50%);
   transform: rotate(-5deg) translateX(-50%);
 }
+
+@media (orientation: portrait) {
+  /* Cube size for small screens */
+  .hero-diag::after {
+    top: 5%;
+    height: 90%;
+  }
+}
+
 
 #cube { /* sizing in below code */
   object-fit: cover;
