--- a/ncis/src/styles/PS.css
+++ b/ncis/src/styles/PS.css
@@ -1,23 +1,22 @@
 .products-section {
     position: relative;
-    margin-top: 0px;
-    padding-top: 65px;
-    z-index:1;
-    margin-bottom: 20px;
-    min-height: 750px; 
-    height: 50vh;
+    margin-top: 0;
+    width: 100vw;
+    height: max-content; 
+    min-height: 90vh; 
+    z-index: 1;
+    padding-top: 10px;
 }
 
 
 .products-container {
+    position: relative;
     background-color: whitesmoke;
-    height: auto;
+    height: max-content;
     padding-top: 30px;  /* how far heading down */
-    padding-bottom: 30px;
     align-items: center;
     flex-direction: row;
-    position: absolute;
-    min-height: 400px;
+    min-height: 70vh;
 }
 
 .panelContainer {
@@ -82,27 +81,31 @@
   
   .ps-diag {
     position: absolute;
-    top: 35%;
     left: 0%;
+    top: 100%; 
     width: 110%;
-    height: 200px;
+    height: 60%;
     z-index: 1;
   }
 
   .ps-diag::after {
     content: '';
     position: absolute;
-    display: block;
-    flex-shrink: 0; 
-    top: 15%;
+    top: -70%;
     left: 40%;
     width: 100%;
-    height: 100%;
+    height: 60%;
     background: white;
+    flex-shrink: 0; 
     transform-origin: 100% 0%;
     -webkit-transform: rotate(-5deg) translateX(-50%);
     -ms-transform: rotate(-5deg) translateX(-50%);
     transform: rotate(-5deg) translateX(-50%);
   }
   
+  @media (max-width: 450px) {
+    .ps-diag::after {
+      top: -30%;
+    }
+  }
 
